--- a/Phonebook/Phonebook.Web/Site.Master
+++ b/Phonebook/Phonebook.Web/Site.Master
@@ -52,8 +52,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/Citizens">Citizens</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Contacts">Contacts</a></li>                    
                     </ul>
                 </div>
             </div>
@@ -63,7 +62,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> Phonebook, Author: Encho Enevski</p>
             </footer>
         </div>
 
